Add admin page template

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -21,7 +21,7 @@
       <!-- Activity name inputs -->
       <div class="row">
           <div class="input-field col s12 l12">
-              <input placeholder="Activity Name" id="activity_name" name="activity_name" type="text" class="validate" required>
+              <input placeholder="Activity Name" id="activity_name" name="activity_name" maxlength="20" ype="text" class="validate" required>
               <label for="activity_name">Activity Name</label>
             </div>
       </div>    
