--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 <header>
     <nav>
-          <div class="nav-wrapper red darken-3">
+          <div class="nav-wrapper ">
               <a href="{{ url_for('home')}}" class="brand-logo">
                 <img src="{{ url_for('static',filename='images/logo.png') }}" class="logo" alt="Website Logo">
               </a>
@@ -39,10 +39,15 @@
                         Log Out
                     </a>
                 </li>
+                
                 <li><a href="{{ url_for('welcome', username=session['client']) }}">
                 My Profile
                 </a>
             </li>
+            <li><a href="{{ url_for('admin_page') }}">
+                <i class="material-icons">admin_panel_settings</i>
+                 </a>
+             </li>
                 {% else %}
                     <li><a href="{{ url_for('login')}}">
                         Log In
@@ -66,6 +71,10 @@
                 My Profile
             </a>
         </li>
+        <li><a href="{{ url_for('admin_page') }}">
+            <i class="material-icons">admin_panel_settings</i>
+             </a>
+         </li>
         {% else %}
             <li><a href="{{ url_for('login')}}">Log In</a></li>
             <li><a href="{{ url_for('register')}}">Register</a></li>
@@ -88,6 +97,10 @@
 
         {% endblock %}
     </main> 
+    <footer>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffc0cbb5" fill-opacity="1" 
+            d="M0,32L48,58.7C96,85,192,139,288,154.7C384,171,480,149,576,122.7C672,96,768,64,864,96C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
