--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,17 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
+            
+ <div class="row">
+   <div class="col s12 center-align">
+    <a href="{{ url_for('new_category')}}" class="btn-large waves-effect waves-light red darken-3">Add New Category</a>
+   </div>
+ </div>           
 
+           
 <div class="row container">
    {% for category in categories %}
-        <div class="col s12 m3">
-        <div class="card blue-grey darken-1">
+        <div class="col s12 m6">
+        <div class="card hoverable darken-1">
             <div class="card-content white-text">
             <span class="card-title">{{ category.category_type }}</span>
         
             </div>
             <div class="card-action">
-            <a href="#">Update</a>
-            <a href="#">Remove</a>
+            <a href="#" class="btn-large waves-effect waves-light teal darken-3">Update</a>
+            <a href="#" class="btn-large waves-effect waves-light red darken-3">Remove</a>
             </div>
         </div>
         </div>
