Add ability to modify activity categories for admin user

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,7 +17,7 @@
         
             </div>
             <div class="card-action">
-            <a href="#" class="btn-large waves-effect waves-light teal darken-3">Update</a>
+            <a href="{{ url_for('category_edit', category_id=category._id) }}" class="btn-large waves-effect waves-light teal darken-3">Update</a>
             <a href="#" class="btn-large waves-effect waves-light red darken-3">Remove</a>
             </div>
         </div>
