--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,28 +1,42 @@
 {% extends "base.html" %}
 {% block content %}
-            
- <div class="row">
-   <div class="col s12 center-align">
+
+<div class="row">
+  <div class="col s12 center-align">
     <a href="{{ url_for('new_category')}}" class="btn-large waves-effect waves-light red darken-3">Add New Category</a>
-   </div>
- </div>           
-
-           
-<div class="row container">
-   {% for category in categories %}
-        <div class="col s12 m6">
-        <div class="card hoverable darken-1">
-            <div class="card-content white-text">
-            <span class="card-title">{{ category.category_type }}</span>
-        
-            </div>
-            <div class="card-action">
-            <a href="{{ url_for('category_edit', category_id=category._id) }}" class="btn-large waves-effect waves-light teal darken-3">Update</a>
-            <a href="#" class="btn-large waves-effect waves-light red darken-3">Remove</a>
-            </div>
-        </div>
-        </div>
-  {% endfor %}
   </div>
+</div>
 
-{% endblock  %}
+
+<div class="row container">
+  {% for category in categories %}
+  <div class="col s12 m6">
+    <div class="card hoverable darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">{{ category.category_type }}</span>
+
+      </div>
+      <div class="card-action">
+        <a href="{{ url_for('category_edit', category_id=category._id) }}"
+          class="btn-large waves-effect waves-light teal darken-3">Update</a>
+        <a href="#{{ category._id }}" class="modal-trigger btn-large waves-effect waves-light red darken-3">Remove</a>
+      </div>
+    </div>
+  </div>
+  <!-- Modal Structure -->
+  <div id="{{ category._id }}" class="modal">
+    <div class="modal-content">
+      <h4>Are you sure you want to delete category?</h4>
+      <p>Activity category will be deleted permanently.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="{{ url_for('remove_category', category_id=category._id) }}"
+        class="modal-close waves-effect waves-green btn-flat"> Delete</a>
+      <a href="{{ url_for('admin_page') }}" class="modal-close waves-effect waves-green btn-flat">
+        Do not Delete</a>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+
+{% endblock %}
