Link home page to redirect user to activity page

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,9 +45,10 @@
     </li>
   </ul>
 </div>
+
 <div class="container">
   <div class="section">
-   <div class="col s12">
+   <div class="col s12"> 
     <div class="row">
       <div class="col s12 m6 l4">
         <div class="card">
@@ -56,7 +57,7 @@
             <span class="card-title">
               Activity
             </span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+             <a href="{{ url_for('get_activities')}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
             <p></p>
@@ -70,7 +71,7 @@
             <span class="card-title">
               Activity
             </span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <a href="{{ url_for('get_activities')}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
             <p></p>
@@ -84,7 +85,7 @@
             <span class="card-title">
               Activity
             </span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <a href="{{ url_for('get_activities')}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
             <p></p>
@@ -95,6 +96,7 @@
   </div>
   </div>
 </div>
+
 <!-- <div class="container"> -->
   <div class="row">
     <div class="col s12">
