--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,10 +13,30 @@ body {
     color: #131211;
     line-height: 90%!important;
 }
-.nav-icons {
-    height: 20px;
-    width: 20px;
+.login-btn {
+    background-color: transparent;
+    border-radius: 36px;
+    border-style: solid;
+    border-color: #f33616;
+    text-transform: capitalize;
+    line-height: 25px;
 }
+.login-btn:hover,
+.register-btn:hover{
+    background-color:#f33616;
+    border-color:#000;
+    color:#000;
+}
+.register-btn {
+    background-color: #eb0a15;
+    border-radius: 36px;
+    border-style: solid;
+    border-color: #ff6600;
+    text-transform: capitalize;
+    line-height: 35px;
+    margin-top: 12px;
+}
+
 .card-panel {
     border-radius: 75px;
     background-color: #d9e61357;
@@ -126,4 +146,8 @@ font-size: 1.5rem!important;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.28rem;
     color: #fff;
+}
+#banner{
+    position: absolute;
+    bottom: 0;
 }
