--- a/templates/activities.html
+++ b/templates/activities.html
@@ -40,7 +40,7 @@
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">{{ activity.activity_name }}<i
                 class="material-icons right">more_vert</i></span>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="{{ url_for('activity_page', activity_id=activity._id)}}">Learn More</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">{{ activity.activity_name }}<i
