Add html pattern to url input

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -48,8 +48,8 @@
               </div>
               <!-- Image URL input -->
               <div class="row">
-                <div class="input-field col s12 l12">
-                  <input placeholder="Image URL" id="image_url" name="image_url" type="url" class="validate">
+                <div class="input-field col s12 l12" >
+                  <input placeholder="Image URL" id="image_url" pattern="https?://.+" name="image_url" type="url" class="validate" required>
                   <label for="image_url">Image URL</label>
                 </div>
             </div>
