--- a/templates/base.html
+++ b/templates/base.html
@@ -35,12 +35,12 @@
                             Activities
                         </a>
                     </li>
-                    <li><a href="{{ url_for('logout')}}">
+                    <li><a href="{{ url_for('logout')}}" class="register-btn">
                         Log Out
                     </a>
                 </li>
                 
-                <li><a href="{{ url_for('welcome', username=session['client']) }}">
+                <li><a href="{{ url_for('welcome', username=session['client']) }}" class="btn login-btn">
                 My Profile
                 </a>
             </li>
@@ -49,11 +49,11 @@
                  </a>
              </li>
                 {% else %}
-                    <li><a href="{{ url_for('login')}}">
+                    <li><a href="{{ url_for('login')}}" class="btn login-btn " >
                         Log In
                         </a>
                     </li>
-                    <li><a href="{{ url_for('register')}}">
+                    <li><a href="{{ url_for('register')}}" class="register-btn" >
                         Register
                         </a>
                     </li>
@@ -87,9 +87,11 @@
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                   {% for message in messages %}
-                  
-                      <h4 class="center-align green lighten-2 text-darken-4">{{ message }}</h4>
-                   
+                    <div class="row">
+                        <div class="s12 offset-m4">
+                          <h4 class="center-align flash-msg">{{ message }}</h4>
+                        </div>
+                    </div>
                   {% endfor %}
                 {% endif %}
             {% endwith %}
@@ -99,10 +101,36 @@
 
         {% endblock %}
     </main> 
-    <footer>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffc0cbb5" fill-opacity="1" 
-            d="M0,32L48,58.7C96,85,192,139,288,154.7C384,171,480,149,576,122.7C672,96,768,64,864,96C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    <!-- SVG Banner from getwaves.io -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ffc0cbb5" id="banner" fill-opacity="1"
+            d="M0,32L48,58.7C96,85,192,139,288,154.7C384,171,480,149,576,122.7C672,96,768,64,864,96C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+    </svg>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
+                    </p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
     </footer>
+ 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
