--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 
 <h3 class="center-align">Register</h3>
 
-    <div class="row">
+    <div class="row bg-image">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register')}}">
             <div class="card-panel">
                 <!-- Username input field -->
@@ -20,9 +20,9 @@
                         </div>
                     </div>
                     <!-- Submit Button -->
-                    <button class="col s12 btn-large waves-effect waves-light red darken-3" type="submit" name="action">
+                    <button class="col s12 m2 offset-m5 btn-large waves-effect register-btn" type="submit" name="action">
                         Register
-                        <i class="material-icons">send</i>
+                        <i class="material-icons right">send</i>
                     </button>
                 </div>
             </div>
