--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align flash-msg">Hi {{ username }}, welcome to your profile!</h3>
+<h3 class="center-align flash-msg">{{ username }}'s profile.</h3>
+<p class="center-align">This is your profile where you can see all yor posted activities or modify them</p>
 
 
 <div class="container">
@@ -17,7 +18,6 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">{{ upload.activity_name }}<i
                                 class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Learn More</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">{{ upload.activity_name }}<i
