Styling landing page cards

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,42 +53,49 @@
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image">
-            <img src="{{ url_for('static',filename='images/hero4.jpg') }}" alt="">
-            <span class="card-title">
-              Activity
+            <img src="{{ url_for('static',filename='images/creativity.jpg') }}" alt="Photo of mother and daughter making neckles">
+            <!-- Photo by RODNAE Productions from Pexels -->
+            <span class="card-headers">
+             Creative Activities for Children
             </span>
              <a href="{{ url_for('get_activities')}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
-            <p></p>
+            <p>Creative activities help to spark your child’s natural curiosity
+              and create their own journey of exploration.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image">
-            <img src="{{ url_for('static',filename='images/hero4.jpg') }}" alt="">
-            <span class="card-title">
-              Activity
+            <img src="{{ url_for('static',filename='images/laptop.jpg') }}" alt="Image of parents and child with a laptop">
+            <!-- pexels-elina-fairytale-4008773 -->
+            <span class="card-headers">
+              Screen time and young children 
             </span>
             <a href="{{ url_for('get_activities')}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
-            <p></p>
+            <p>Looking for strategies to reduce screen time?
+              We have a  couple of ideas.
+              Register for free to find out.</p>
           </div>
         </div>
       </div>
       <div class="col s12 m6 l4">
         <div class="card">
           <div class="card-image">
-            <img src="{{ url_for('static',filename='images/hero4.jpg') }}" alt="">
-            <span class="card-title">
-              Activity
+            <img src="{{ url_for('static',filename='images/work-from-home.jpg') }}" alt="">
+            <!-- Photo by Ketut Subiyanto from Pexels -->
+            <span class="card-headers">
+              Are you working parents looking for creative ideas?
             </span>
             <a href="{{ url_for('get_activities')}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
-            <p></p>
+            <p>Looking for new ways to keep your kids entertained while WFH?
+              Register for free and get some ideas.</p>
           </div>
         </div>
       </div>
