--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align flash-msg">{{ username }}'s profile.</h3>
+<h3 class="center-align flash-msg titles">{{ username }}'s profile.</h3>
 <p class="center-align">This is your profile where you can see all yor posted activities or modify them</p>
 
 
 <div class="container">
     <div class="section">
+     {% if uploads|length > 0 %}
         <div class="row">
-            {% for upload in uploads %}
-            {% if session.client|lower == upload.uploaded_by|lower %}
+            {% for upload in uploads if session.client|lower == upload.uploaded_by|lower %}
             <div class="col s12 m6 l4">
                 <div class="card hoverable">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -40,14 +40,13 @@
                             class="modal-trigger waves-effect waves-light btn red text-darken-3">Remove</a>
                         <a href="{{ url_for('update_activity', activity_id=upload._id) }}"
                             class="waves-effect waves-light btn">Update</a>
-
                     </div>
                 </div>
             </div>
                <!-- Modal -->
                 <div id="{{ upload._id }}" class="modal">
                     <div class="modal-content">
-                        <h4>Are you sure you want to delete activity?</h4>
+                        <h4>{{ username }},are you sure you want to delete activity?</h4>
                         <p>Activity will be deleted permanently.</p>
                     </div>
                     <div class="modal-footer">
@@ -57,13 +56,12 @@
                             Do not Delete</a>
                     </div>
                 </div>
-            {% endif %}
-            {% endfor %}
-        </div>
-    </div>
-
- 
+            {% endfor %} 
+        </div> 
+        {% else %}
+        <h3 class="red center-align">No Results Found</h3>
+     {% endif %} 
+     </div>
 </div>
-
 
 {% endblock %}
