--- a/templates/activities.html
+++ b/templates/activities.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="row col s12 center-align container">
-  <h3 class="center-align"> Activities</h3>
+  <h3 class="center-align titles"> Activities</h3>
   <div class="row card-panel">
      <form action="{{ url_for('search')}}" method="post" class="col s12">
          <div class="row valign-wrapper center-align">
@@ -66,7 +66,7 @@
       <!-- Modal Structure -->
       <div id="{{ activity._id }}" class="modal">
         <div class="modal-content">
-          <h4>Are you sure you want to delete activity?</h4>
+          <h4>{{ username }}!Are you sure you want to delete activity?</h4>
           <p>Activity will be deleted permanently.</p>
         </div>
         <div class="modal-footer">
