--- a/templates/category_edit.html
+++ b/templates/category_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="row col s12 center-align">
-  <h3 class="center-align">Update Activity Category</h3>
+  <h3 class="center-align titles">Update Activity Category</h3>
 </div>
 
 <div class="row">
