--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,14 +2,14 @@
 {% block content %}
 
 <div class="row col s12 center-align">
-  <h3 class="center-align">Upload Activity</h3>
+  <h3 class="center-align titles">Upload Activity</h3>
 </div>
 
 <div class="row">
     <form action="{{ url_for('upload')}}" method="POST" class="col s12 l6 offset-l3">
       <div class="row">
         <div class="input-field col s12 l6 offset-l3">
-          <select id="category_type" name="category_type" class="validate" required>
+          <select id="category_type" name="category_type" class="validate" required aria-required="true">
             <option value="" selected>Select Activity Category</option>
               {% for category in categories %}
                    <option value="{{ category.category_type}}">{{ category.category_type}}</option>
@@ -21,28 +21,28 @@
       <!-- Activity name inputs -->
       <div class="row">
           <div class="input-field col s12 l12">
-              <input placeholder="Activity Name" id="activity_name" name="activity_name" maxlength="20" type="text" class="validate" required>
+              <input placeholder="Activity Name" id="activity_name" name="activity_name" maxlength="20" type="text" class="validate" data-length="20" required>
               <label for="activity_name">Activity Name</label>
             </div>
       </div>    
           <!-- Activity nescessities inputs -->
               <div class="row">
                   <div class="input-field col s12 l12">
-                    <textarea id="necessities" placeholder="e.g. toys,bowls,crayons" name="necessities" type="text" class="materialize-textarea validate" required></textarea>
+                    <textarea id="necessities" placeholder="e.g. toys,bowls,crayons" name="necessities" type="text" class="materialize-textarea validate" data-length="500" required></textarea>
                     <label for="necessities">Activity Necessities</label>
                   </div>
               </div>
               <!-- Activity description inputs -->
               <div class="row">
                 <div class="input-field col s12 l12">
-                  <textarea id="description"  placeholder="Activity Description" name="description" type="text"class="materialize-textarea validate" required></textarea>
+                  <textarea id="description"  placeholder="Activity Description" name="description" type="text"class="materialize-textarea validate" data-length="500" required></textarea>
                   <label for="description">Activity description</label>
                 </div>
               </div>
               <!-- Activity outcome inputs -->
               <div class="row">
                 <div class="input-field col s12 l12">
-                  <textarea id="activity_outcome"  placeholder="Activity Outcome" name="activity_outcome" class="materialize-textarea validate" required ></textarea>
+                  <textarea id="activity_outcome"  placeholder="Activity Outcome" name="activity_outcome" class="materialize-textarea validate" data-length="500" required ></textarea>
                   <label for="activity_outcome">Activity outcome</label>
                 </div>
               </div>
