--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,7 +62,8 @@
 #city {
     background-position: bottom;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment:scroll;
+    background-size: cover;
     width: 100%;
 }
 nav{
@@ -78,6 +79,43 @@ font-size: 1.5rem!important;
     box-shadow: -9px 2px 4px #c1a8ad;
     border-start-start-radius: 32px;
     border-top-right-radius: 74px;
+    position: relative;
+    text-align: center;
+}
+.card-headers {
+    color: #ec0808;
+    font-family: 'Indie Flower',cursive;
+    max-width: 100%;
+    padding: 24px;
+    text-transform: uppercase;
+    font-size: 32px;
+    overflow-y: hidden;
+    text-align: center;
+    position:absolute;
+  
+}
+.card-overlay {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0!important;   
+    right: 0;   
+    bottom: 0;
+    opacity: 0; 
+    z-index: 1;
+    cursor: pointer;
+    border-bottom-left-radius: 69px;
+    border-end-start-radius: 100px;
+    box-shadow: -9px 2px 4px #c1a8ad;
+    border-start-start-radius: 32px;
+    border-top-right-radius: 74px;
+}
+
+.card-overlay:hover {
+    opacity: 1;
+    background-color: rgba(0,0,0,0.5);
+    transition: .6s ease-in-out;
+
 }
 .flash-msg {
     text-transform: capitalize;
@@ -144,27 +182,21 @@ font-size: 1.5rem!important;
 .activity-content {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.28rem;
-    color: #fff;
+    color:#00aeef ;
 }
 #banner{
-    position: absolute;
-    bottom: 0;
+    margin-bottom: -6px;
 }
-.card-headers {
-    color: #ec0808;
-    bottom: 57px;
-    left: 27px;
-    font-family: 'Indie Flower',cursive;
-    max-width: 100%;
-    padding: 24px;
-    text-transform: uppercase;
-    font-size: 32px;
-    position: absolute;
-}
+
+
+
 .titles {
     font-size: 5.625rem;
     font-family: 'Indie Flower',cursive;
     color: #ec0808;
+}
+.page-footer {
+    background-color: #00aeef;
 }
 @media only screen and (max-width: 992px){
     nav .logo {
