--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <nav>
           <div class="nav-wrapper ">
               <a href="{{ url_for('home')}}" class="brand-logo">
-                <img src="{{ url_for('static',filename='images/logo.png') }}" class="logo" alt="Website Logo"><span class="logo">Growapps&trade;</span>
+                <img src="{{ url_for('static',filename='images/logo.png') }}" class="logo" alt="Website Logo"><span class="logo hide-on-small-only">Growapps&trade;</span>
               </a>
               
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">fingerprint</i></a>
@@ -103,36 +103,32 @@
 
         {% endblock %}
     </main> 
-    <!-- SVG Banner from getwaves.io -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#ffc0cbb5" id="banner" fill-opacity="1"
-            d="M0,32L48,58.7C96,85,192,139,288,154.7C384,171,480,149,576,122.7C672,96,768,64,864,96C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-        </path>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" id="banner" viewBox="0 0 1440 320"><path fill="#00aeef" fill-opacity="1" d="M0,128L40,144C80,160,160,192,240,197.3C320,203,400,181,480,197.3C560,213,640,267,720,272C800,277,880,235,960,192C1040,149,1120,107,1200,117.3C1280,128,1360,192,1400,224L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
     <footer class="page-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
-                    </p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-        </div>
-    </footer>
- 
+   
+       <div class="container">
+           <div class="row">
+               <div class="col l6 s12">
+                   <h5 class="white-text">Footer Content</h5>
+                   <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
+                   </p>
+               </div>
+               <div class="col l4 offset-l2 s12">
+                   <h5 class="white-text">Links</h5>
+                   <ul>
+                       <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                   </ul>
+               </div>
+           </div>
+       </div>
+       <div class="footer-copyright">
+           <div class="container">
+               © 2014 Copyright Text
+               <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+           </div>
+       </div>
+  
+   </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
