--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,16 @@
-/* body {
-    background-color: #da1336b5;
-    
-} */
+:root {
+    --main-blue-color:#00AEEF;
+    --yellow-color:#F1E066;
+    --red-color:#D4334A;
+    --orange-color:#FB7A17;
+    --green-color:#84D56D;
+    --logo-color:#f5e765;
+    --title-color:#ec0808;
+}
 .logo {
     height: 55px;
     width: 55px;
-    color: #f5e765;
+    color:var(--logo-color);
     font-family: 'Indie Flower',cursive;
     vertical-align: middle;
     margin-bottom: 10px;
@@ -44,11 +49,11 @@
 
 .card-panel {
     border-radius: 75px;
-    background-color: #d9e61357;
+    background-color:var(--yellow-color);
 }
 .card {
     border-radius: 70px;
-    background-color: #f3c5c5;
+    background-color:var(--orange-color);
 }
 .btn-large {
     border-radius: 32px;
@@ -66,24 +71,28 @@
     background-size: cover;
     width: 100%;
 }
-nav{
-    background-color: #00aeef;
+nav { 
+    background-color:var(--main-blue-color);
 }
 nav ul a {
 font-size: 1.5rem!important;
+color: var(--logo-color);
+}
+nav ul a:hover{
+    color:var(--title-color);
 }
 .card .card-image img  { 
     height: 18.75rem;
     border-bottom-left-radius: 69px;
     border-end-start-radius: 100px;
-    box-shadow: -9px 2px 4px #c1a8ad;
+    box-shadow: -9px 2px 4px var(--yellow-color);
     border-start-start-radius: 32px;
     border-top-right-radius: 74px;
     position: relative;
     text-align: center;
 }
 .card-headers {
-    color: #ec0808;
+    color: var(--title-color);
     font-family: 'Indie Flower',cursive;
     max-width: 100%;
     padding: 24px;
@@ -106,7 +115,7 @@ font-size: 1.5rem!important;
     cursor: pointer;
     border-bottom-left-radius: 69px;
     border-end-start-radius: 100px;
-    box-shadow: -9px 2px 4px #c1a8ad;
+    box-shadow: -9px 2px 4px var(--yellow-color);
     border-start-start-radius: 32px;
     border-top-right-radius: 74px;
 }
@@ -119,7 +128,7 @@ font-size: 1.5rem!important;
 }
 .flash-msg {
     text-transform: capitalize;
-    color: #d11919;
+    color: var(--title-color);
     font-family: "Open Sans", sans-serif;
     height: 54px;
     line-height: 54px;
@@ -127,19 +136,6 @@ font-size: 1.5rem!important;
     padding: 0 28px;
     border-radius: 32px;
 }
-
-.search-container {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background:#B71C1C;
-    height: 40px; 
-    border-radius: 40px;
-    padding: 10px;
-    transition: all ease-in-out 0.6s;
-}
-
  input.search-text {
     border-bottom: none!important;
     width: 80%!important;
@@ -150,7 +146,12 @@ font-size: 1.5rem!important;
     transition: 0.4s;
     line-height: 40px;
 } 
-
+::placeholder,
+.dropdown-content li>a,
+.dropdown-content li>span,
+.select-wrapper input.select-dropdown {
+    color: var(--title-color);
+}
 .modal {
     /* https://pixabay.com/illustrations/illustration-child-clipart-graphics-2814002/ */
     background: url(../images/modal.png);
