--- a/templates/base.html
+++ b/templates/base.html
@@ -109,14 +109,14 @@
        <div class="container">
            <div class="row">
                <div class="col l6 s12">
-                   <h5 class="white-text">Footer Content</h5>
+                   <h5 class="white-text">Growapps&trade;</h5>
                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
                    </p>
                </div>
                <div class="col l4 offset-l2 s12">
-                   <h5 class="white-text">Links</h5>
+                   <h5 class="white-text">Get conected?</h5>
                    <ul>
-                       <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                       <li><a href="https://www.linkedin.com/in/goran-kuzma/" aria-label="Link to Linkedin" rel="noopener" target="_blank" class="grey-text text-lighten-3" >Goran Kuzma</a></li>
                    </ul>
                </div>
            </div>
